# rest_in_rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-04-29-143455_create_posts/: down.sql  up.sql
src/: constants.rs  main.rs  notes.rs  routes.rs  schema.rs
src/modules/: mod.rs  notes.rs  routes.rs  types.rs
