[package]
name = "rest_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
log = "0.4"
simple-logging = "2.0.2"
env_logger = "0.11.3"
